fixes horizontal scrollbar at tablet sizing

--- a/src/index.css
+++ b/src/index.css
@@ -476,6 +476,7 @@ body {
 	font-weight: 300;
 	height: 100vh;
 	width: 100vw;
+	max-width: 100%;
 	margin: 0px;
 	background-image: url('./assets/homeBgImage.jpg');
 	background-size: cover;
